--- a/symbol.html
+++ b/symbol.html
@@ -7,18 +7,31 @@
     <style>
         body { font-family: Arial, sans-serif; padding: 2em; background-color: #f9f9f9; }
         h1 { color: #222; }
+        img { max-width: 300px; display: block; margin-bottom: 1em; }
     </style>
 </head>
 <body>
-    <h1>Meaning of the Emblem of the Kingdom of Prima Syam</h1>
-    <p>The emblem of the Kingdom is shaped like a palace composed of six color pillars:</p>
+    <h1>Symbols of the Kingdom of Prima Syam</h1>
+    <h2>Pillar Emblem (Six-Color Palace)</h2>
+    <img src="logo.jpeg" alt="Pillar Emblem">
+    <p>This emblem represents the digital foundation of the Kingdom, shaped like a palace roof and six pillars. Each pillar is symbolically tied to a royal figure:</p>
     <ul>
-        <li><strong>YMTS (Black)</strong>: Represents the roof, the overarching protection and authority.</li>
-        <li><strong>YMR (Gold/Yellow)</strong>: The strong and straight structure of the palace — resilience and nobility.</li>
-        <li><strong>YMP Cahaya (Red)</strong>: The strongest pillar, symbolizing strength and leadership in all matters.</li>
-        <li><strong>YMP Mutia (Green)</strong>: A pillar of calm and harmony, like the vast and nurturing earth.</li>
-        <li><strong>YMP Aisyah (Blue)</strong>: The embodiment of compassion, softness, and loving hearts.</li>
-        <li><strong>YMP Imam (Orange)</strong>: Represents the pillar of Islamic faith and spiritual guidance.</li>
+        <li><strong>YMTS (Black):</strong> The roof – protection and authority.</li>
+        <li><strong>YMR (Yellow/Gold):</strong> Framework – nobility and justice.</li>
+        <li><strong>YMP Cahaya (Red):</strong> Strength and leadership.</li>
+        <li><strong>YMP Mutia (Green):</strong> Calmness and harmony.</li>
+        <li><strong>YMP Aisyah (Blue):</strong> Compassion and gentleness.</li>
+        <li><strong>YMP Imam (Orange):</strong> Islamic spiritual guidance.</li>
+    </ul>
+
+    <h2>Coat of Arms</h2>
+    <img src="coa.jpeg" alt="Coat of Arms">
+    <p>The royal Coat of Arms includes:</p>
+    <ul>
+        <li>A crown symbolizing monarchy</li>
+        <li>Lion and horse for guardianship</li>
+        <li>Waves and sun for prosperity and peace</li>
+        <li>Swords and scroll for wisdom and valor</li>
     </ul>
 </body>
 </html>
