--- a/register.html
+++ b/register.html
@@ -13,6 +13,6 @@
 <body>
     <h1>Register as a Digital Citizen of the Kingdom of Prima Syam</h1>
     <p>Please complete the registration form below to become an official digital citizen of the Kingdom of Prima Syam. Your name will be recorded in the digital registry and you may be eligible for citizen badges and participation in future governance.</p>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSevExampleFormURL/viewform?embedded=true">Loading…</iframe>
+    <iframe src="https://forms.gle/PWTx7EaEFQ5Q41eJ8/viewform?embedded=true">Loading…</iframe>
 </body>
 </html>
